--- a/libcxx/action.yml
+++ b/libcxx/action.yml
@@ -1,11 +1,4 @@
-name: Build and Release
-
-on:
-  workflow_dispatch:
-
-jobs:
-  build-and-release:
-    runs-on: ubuntu-latest
+runs:
     steps:
       - uses: actions/checkout@v3
       - name: Ensure llvm-17
