--- a/.github/workflows/libcxx.action.yml
+++ b/.github/workflows/libcxx.action.yml
@@ -6,4 +6,6 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    uses: ../libcxx
+    steps:
+    - uses: actions/checkout@v3
+    - uses: ./libcxx
