--- a/libcxx/action.yml
+++ b/libcxx/action.yml
@@ -1,15 +1,26 @@
+
 runs:
-    steps:
-      - uses: actions/checkout@v3
-      - name: Ensure llvm-17
-      - run: |
-      	  wget https://apt.llvm.org/llvm.sh
-	  chmod +x ./llvm.sh
-	  ./llvm.sh 17
-      - name: Build
-        run: ./build.sh
-      - name: Upload Release Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-artifact
-          path: *.rollups.tar.gz
+  using: composite
+  steps:
+    - name: Ensure llvm-17
+      shell: bash
+      working-directory: libcxx
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x ./llvm.sh
+        sudo ./llvm.sh 17
+    - name: Build
+      shell: bash
+      working-directory: libcxx
+      run: ./build.sh
+    - name: Upload Release Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        working-directory: libcxx
+        name: release-artifact
+        path: "*.rollups.tar.gz"
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ failure() }}
+      with:
+        limit-access-to-actor: true
