--- a/libcxx/action.yml
+++ b/libcxx/action.yml
@@ -6,12 +6,12 @@ runs:
       shell: bash
       working-directory: libcxx
       run: |
+        mkdir -p tmp
+        apt download binaryen && dpkg -x binaryen*.deb tmp/
+        echo $PWD/tmp/usr/bin | tee -a $GITHUB_PATH
         wget https://apt.llvm.org/llvm.sh
         chmod +x ./llvm.sh
         sudo ./llvm.sh 17 2>&1 | (grep -iE 'warning|error|fail|\bnot\b' || true)
-        mkdir -p bin
-        apt download binaryen && dpkg -x binaryen*.deb bin/
-        echo $PWD/bin | tee -a $GITHUB_PATH
         #curl https://github.com/bytecodealliance/wasmtime/releases/download/dev/wasmtime-dev-x86_64-linux.tar.xz \
         #    | tar --strip-components=1 -xvf wasmtime-dev-x86_64-linux/wasmtime
 
