--- a/libcxx/action.yml
+++ b/libcxx/action.yml
@@ -35,6 +35,8 @@ runs:
         ls -l staging/ *.tar.gz
         echo artifact_name=$(date "+%Y%m%d").rollups.libcxx-wasm32 | tee -a $GITHUB_ENV | tee -a $GITHUB_STEP_SUMMARY
         export CC=clang-17 CXX=clang++-17
+        ./staging/bin/w32cc-17 test/main.c -o main.baremetal.wasm -Oz -Wl,--strip-debug
+        ./staging/bin/w32c++-17 test/main.cpp -o main.baremetal.wasm -Oz -Wl,--strip-debug
         ./staging/bin/w32c++-17 test/main.cpp -o main.cxx.wasm
         ./staging/bin/w32c++-17 test/stdio.cpp -o stdio.cxx.wasm
         ./staging/bin/w32cc-17 test/stdio.c -o stdio.c.wasm
