--- a/.github/workflows/libcxx.action.yml
+++ b/.github/workflows/libcxx.action.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
     - uses: ./libcxx
